--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li class="nav-item nav-link"><a href="./index.html"><img src="./assets/home.svg" class="icon home"><span id="home">Home</span></a></li>         
                     <li class="nav-item nav-link" data-icon="cart"><img src="./assets/cart.svg" class="icon cart" id="cart-icon"></li>
                     <li class="nav-item nav-link"><a href="./login.html"><img src="./assets/profile.svg" class="icon profile"></a></li>
-                    <li class="nav-item nav-link" data-icon="burger">s<img src="./assets/bars-solid.svg" class="burger-icon"></li>
+                    <li class="nav-item nav-link" data-icon="burger"><img src="./assets/bars-solid.svg" class="burger-icon"></li>
                 </ul>
                 
             </div>
