--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header-container">
         <div class="logo-container">
-            <img src="./assets/logo.jpg">
+            <a href="./index.html"><img src="./assets/logo.jpg"></a>
         </div>
         <nav class="navbar">
             <div class="icons-box">
@@ -26,6 +26,7 @@
         </nav>
         <div class="menu-burger">
             <p><a href="./index.html">Home</a></p>
+            <p><a href="./products.html">Productos</a></p>
             <p><a href="./login.html">Ingresar</a></p>
             <p id="cart-link">Carro</p>
         </div>
@@ -49,7 +50,7 @@
     </header>
     <div class="div-overlay"></div>
     <div class="menu-bar"></div>
-
+<!--
     <section class="filter-container">
         <ul class="filter-list">
             <li class="filter-item" data-category="pencil">Lápices <img class="filter-img" src="./assets/pencil.jpg"></li>
@@ -59,11 +60,40 @@
             <li class="filter-item" data-category="glow">Brillos <img class="filter-img" src="./assets/glow.png"></li>
         </ul>
     </section>
+-->
+
 
     <main class="div-cards">
                 
     </main>
 
+    <section class="div-hero">
+        <div class="div-text">
+            <h1 class="title-hero">
+                Date el gusto con
+                Goddess Joy            
+            </h1>
+            <h2>
+                Goddess Joy
+            </h2>
+        </div>
+            <div class="hero-buttons">
+                <button class="hero-products">
+                    <a href="./products.html">Ver Productos</a>
+                </button>
+                <button class="hero-who">
+                    Quienes Somos
+                </button>            
+            </div>
+
+        <img class="img-hero" src="./assets/cosmetic_background.png" alt="">
+    </section>
+    <section class="div-who">
+        <div class="who-text">
+            Somos un emprendimiento que empieza en 2022. Somos un grupo de chicas que buscamos ayudarte a estar hermosa, con los mejores make-ups a los mejores precios y sin moverte de tu casa!
+            Elegí cuántos productos necesites para armar tu look buscado. Nosotras nos encargamos del resto.
+        </div>
+    </section>
     <footer>
         <p>© Copyright 2022: Todos los derechos reservados.</p>
     </footer>
