--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header-container">
         <div class="logo-container">
-            <img src="./assets/logo.jpg">
+            <a href="./index.html"><img src="./assets/logo.jpg"></a>
         </div>
         <nav class="navbar">
             <div class="icons-box">
@@ -26,6 +26,7 @@
         </nav>
         <div class="menu-burger">
             <p><a href="./index.html">Home</a></p>
+            <p><a href="./products.html">Productos</a></p>
             <p><a href="./login.html">Ingresar</a></p>
             <p id="cart-link">Carro</p>
         </div>
@@ -59,6 +60,7 @@
             <label>Contraseña:</label>
             <input type="password"  class="box-text">
         </div>
+        <button type="submit" class="btn-box btn-continue">Login</button>
         <p class="sign-text"><a href="./registration.html">No tenés una cuenta aún? Registrate!</a></p>
     </section>   
     <script src="main.js"></script>
