--- a/registration.html
+++ b/registration.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header-container">
         <div class="logo-container">
-            <img src="./assets/logo.jpg">
+            <a href="./index.html"><img src="./assets/logo.jpg"></a>
         </div>
         <nav class="navbar">
             <div class="icons-box">
@@ -26,6 +26,7 @@
         </nav>
         <div class="menu-burger">
             <p><a href="./index.html">Home</a></p>
+            <p><a href="./products.html">Productos</a></p>
             <p><a href="./login.html">Ingresar</a></p>
             <p id="cart-link">Carro</p>
         </div>
