--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet/less" type="text/css" href="styles.less">
     <link rel="icon" href="./assets/logo.jpg">
-    <title>Registrar</title>
+    <title>Contactanos</title>
 </head>
 <body>
     <header class="header-container">
@@ -53,42 +53,26 @@
     <div class="menu-bar"></div>
     
     <section id="registration">
-        <div class="div-reg">
-            <div class="box-reg">
-                <label for="name">Nombre:</label>
-                <input id="name" type="text" class="box box-text log" placeholder="Name">
-            </div>
-            <div class="box-reg">
-                <label for="surname">Apellido:</label>
-                <input id="surname" type="text" class="box box-text log" placeholder="Surname">
-            </div>
-            <div class="box-reg">
-                <label for="email">Email:</label>
-                <input type="email" class="box box-text log" placeholder="Email">
-            </div>
-            <div class="box-reg">
-                <label for="phone">Teléfono:</label>
-                <input id="phone" type="phone" class="box box-text log" placeholder="(00) 000 000 000">
-            </div>
-            <div class="box-reg">
-                <label for="pass">Contraseña:</label>
-                <input id="pass" type="password" class="box box-text log" placeholder="Password">
-            </div>
-            <div class="box-reg">
-                <label for="pass2">Confirmar Contraseña:</label>
-                <input id="pass2" type="password" class="box box-text log" placeholder="Password">
-            </div>
-            <button type="submit" class="btn-box btn-continue">Registrar</button>
+        <div class="box-reg">
+            <label for="name">Nombre:</label>
+            <input id="name" type="text" class="box box-text log" placeholder="Name">
         </div>
+        <div class="box-reg">
+            <label for="email">Email:</label>
+            <input type="email" class="box box-text log" placeholder="Email"></div>
+        <div class="box-reg">
+            <input id="comment" type="text" class="box box-text comment">
+        </div>
+        <button type="submit" class="btn-box btn-continue">Enviar</button>
     </section>
+
     <footer>
-        <div id="footer-contact" class="contact-info">
+        <div class="contact-info">
             <p>Dirección: Azcuénaga 1050</p>
             <p>Teléfono: 4801-3233</p>
         </div>
-        <p id="footer-link"><a href="./contact.html">Contactanos!</a></p>
-        <p id="footer-law">© Copyright 2022: Todos los derechos reservados.</p>
-    </footer>
+        <p>© Copyright 2022: Todos los derechos reservados.</p>
+    </footer>   
     <script src="main.js"></script>
     <script src="data.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/less"></script>
