--- a/login.html
+++ b/login.html
@@ -28,6 +28,7 @@
             <p><a href="./index.html">Home</a></p>
             <p><a href="./products.html">Productos</a></p>
             <p><a href="./login.html">Ingresar</a></p>
+            <p><a href="./contact.html">Contactanos</a></p>
             <p id="cart-link">Carro</p>
         </div>
         <aside class="cart-container">
@@ -62,7 +63,15 @@
         </div>
         <button type="submit" class="btn-box btn-continue">Login</button>
         <p class="sign-text"><a href="./registration.html">No tenés una cuenta aún? Registrate!</a></p>
-    </section>   
+    </section>
+    <footer>
+        <div id="footer-contact" class="contact-info">
+            <p>Dirección: Azcuénaga 1050</p>
+            <p>Teléfono: 4801-3233</p>
+        </div>
+        <p id="footer-link"><a href="./contact.html">Contactanos!</a></p>
+        <p id="footer-law">© Copyright 2022: Todos los derechos reservados.</p>
+    </footer> 
     <script src="main.js"></script>
     <script src="data.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/less"></script>
