--- a/products.html
+++ b/products.html
@@ -28,6 +28,7 @@
             <p><a href="./index.html">Home</a></p>
             <p><a href="./products.html">Productos</a></p>
             <p><a href="./login.html">Ingresar</a></p>
+            <p><a href="./contact.html">Contactanos</a></p>
             <p id="cart-link">Carro</p>
         </div>
         <aside class="cart-container">
@@ -66,7 +67,12 @@
     </main>
 
     <footer>
-        <p>© Copyright 2022: Todos los derechos reservados.</p>
+        <div id="footer-contact" class="contact-info">
+            <p>Dirección: Azcuénaga 1050</p>
+            <p>Teléfono: 4801-3233</p>
+        </div>
+        <p id="footer-link"><a href="./contact.html">Contactanos!</a></p>
+        <p id="footer-law">© Copyright 2022: Todos los derechos reservados.</p>
     </footer>
     <script src="main.js"></script>
     <script src="data.js"></script>
