--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <p><a href="./index.html">Home</a></p>
             <p><a href="./products.html">Productos</a></p>
             <p><a href="./login.html">Ingresar</a></p>
+            <p><a href="./contact.html">Contactanos</a></p>
             <p id="cart-link">Carro</p>
         </div>
         <aside class="cart-container">
@@ -50,18 +51,6 @@
     </header>
     <div class="div-overlay"></div>
     <div class="menu-bar"></div>
-<!--
-    <section class="filter-container">
-        <ul class="filter-list">
-            <li class="filter-item" data-category="pencil">Lápices <img class="filter-img" src="./assets/pencil.jpg"></li>
-            <li class="filter-item" data-category="lipstick">Labiales <img class="filter-img" src="./assets/lipstick.png"></li>
-            <li class="filter-item" data-category="serum">Serums <img class="filter-img" src="./assets/serum.jpg"></li>
-            <li class="filter-item" data-category="powder">Bases <img class="filter-img" src="./assets/powder.png"></li>
-            <li class="filter-item" data-category="glow">Brillos <img class="filter-img" src="./assets/glow.png"></li>
-        </ul>
-    </section>
--->
-
 
     <main class="div-cards">
                 
@@ -95,7 +84,12 @@
         </div>
     </section>
     <footer>
-        <p>© Copyright 2022: Todos los derechos reservados.</p>
+        <div id="footer-contact" class="contact-info">
+            <p>Dirección: Azcuénaga 1050</p>
+            <p>Teléfono: 4801-3233</p>
+        </div>
+        <p id="footer-link"><a href="./contact.html">Contactanos!</a></p>
+        <p id="footer-law">© Copyright 2022: Todos los derechos reservados.</p>
     </footer>
     <script src="main.js"></script>
     <script src="data.js"></script>
